# Chess

./: CMakeLists.txt  Dockerfile  Main  Main.cpp  compile_script.sh
include/: BitScan.hpp  Bitboard.hpp  Cache.hpp  Calc.hpp  Masks.hpp  Move.hpp  Position.hpp  Types.hpp
include/CLI/: Console.hpp  Image.hpp
include/Core/: BitScan.hpp  Bitboard.hpp  Cache.hpp  Calc.hpp  Masks.hpp  Move.hpp  Position.hpp
include/Logic/: Logic.hpp
includes/: Bitboard.hpp
src/: Bitboard.cpp  Bitboard.hpp  Cache.cpp  Main.cpp  PieceBitboardContainer.cpp  PieceBitboardContainer.hpp  Position.cpp
src/CLI/: Console.cpp  Image.cpp  Main.cpp
src/Core/: Bitboard.cpp  Cache.cpp  Position.cpp
src/Logic/: Logic.cpp
